--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.10.0",
+    "overlapping-marker-spiderfier-leaflet": "^0.2.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
