--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-sidebar-v2": "^3.2.3",
+    "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "overlapping-marker-spiderfier-leaflet": "^0.2.7",
     "react": "^19.0.0",
