--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
-    "leaflet-sidebar-v2": "^3.2.3",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "overlapping-marker-spiderfier-leaflet": "^0.2.7",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-globe.gl": "^2.33.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-range": "^1.10.0",
     "react-scripts": "^5.0.1",
+    "react-sidebar": "^3.0.2",
+    "react-transition-group": "^4.4.5",
+    "react-window": "^1.8.11",
+    "three": "^0.174.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
