--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-sidebar": "^3.0.2",
     "react-transition-group": "^4.4.5",
     "react-window": "^1.8.11",
+    "supercluster": "^8.0.1",
     "three": "^0.174.0",
     "web-vitals": "^4.2.4"
   },
