--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "react-sidebar": "^3.0.2",
     "react-transition-group": "^4.4.5",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "supercluster": "^8.0.1",
     "three": "^0.174.0",
