--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "overlapping-marker-spiderfier-leaflet": "^0.2.7",
