--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
     "overlapping-marker-spiderfier-leaflet": "^0.2.7",
+    "pluralize": "^8.0.0",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
