--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "framer-motion": "^12.5.0",
-    "leaflet": "^1.9.4",
-    "leaflet.markercluster": "^1.5.3",
-    "lodash": "^4.17.21",
-    "lodash.throttle": "^4.1.1",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.10.0",
-    "overlapping-marker-spiderfier-leaflet": "^0.2.7",
-    "pluralize": "^8.0.0",
-    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-globe.gl": "^2.33.1",
@@ -29,15 +27,13 @@
     "react-transition-group": "^4.4.5",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
-    "supercluster": "^8.0.1",
     "three": "^0.174.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
