--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
+    "@fontsource/ubuntu": "^5.2.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
